--- a/src/main/java/com/manager/properties/Message.properties
+++ b/src/main/java/com/manager/properties/Message.properties
@@ -2,3 +2,14 @@ ERR01=Hay nhap ten dang nhap
 ERR02=Hay nhap mat khau
 ERR03=Ten hoac mat khau khong dung
 ERR04=Khong co tai khoan phu hop
+ERR05=Hay nhap ma so the bao hiem
+ERR06=Hay nhap ho ten
+ERR07=Hay nhap ten cong ty
+ERR08=Hay nhap dia chi
+ERR09=Hay nhap noi dang ky KCB
+ERR10=Hay nhap ngay bat dau the BH
+ERR11=Hay nhap ngay ket thuc the BH
+ERR12=Da ton tai thong tin the bao hiem
+ERR13=Loi nhap sai dinh dang tai hang muc ngay sinh
+ERR14=Loi nhap sai dinh dang tai hang muc ngay bat dau the BH
+ERR15=Loi nhap sai dinh dang tai hang muc ngay ket thuc the BH
