--- a/src/main/java/com/manager/properties/Message.properties
+++ b/src/main/java/com/manager/properties/Message.properties
@@ -13,3 +13,11 @@ ERR12=Da ton tai thong tin the bao hiem
 ERR13=Loi nhap sai dinh dang tai hang muc ngay sinh
 ERR14=Loi nhap sai dinh dang tai hang muc ngay bat dau the BH
 ERR15=Loi nhap sai dinh dang tai hang muc ngay ket thuc the BH
+ERR16=Email khong dung dinh dang
+ERR17=Ho ten khong qua 50 ky tu
+ERR18=Ten cong ty khong qua 50 ky tu
+ERR19=Dia chi cong ty khong qua 100 ky tu
+ERR20=Email khong qua 50 ky tu
+ERR21=so dien thoai khong qua 15 ky tu
+ERR22=Ma so the bao hiem khong qua 10 ky tu
+ERR23=Noi dang ky KCB khong qua 50 ky tu
