--- a/src/main/java/com/manager/properties/Message.properties
+++ b/src/main/java/com/manager/properties/Message.properties
@@ -21,3 +21,5 @@ ERR20=Email khong qua 50 ky tu
 ERR21=so dien thoai khong qua 15 ky tu
 ERR22=Ma so the bao hiem khong qua 10 ky tu
 ERR23=Noi dang ky KCB khong qua 50 ky tu
+ERR24=Cong ty da ton tai
+ERR25=Hay chon cong ty
