--- a/build.gradle
+++ b/build.gradle
@@ -36,11 +36,14 @@ repositories {
 dependencies {
 	compile(
 		'org.springframework.boot:spring-boot-starter-web',
+		'org.springframework.boot:spring-boot-starter-data-jpa',
 		'org.apache.tomcat.embed:tomcat-embed-jasper',
+		'org.webjars:angularjs:1.3.14',
 		'javax.servlet:jstl',
 		'org.eclipse.jdt.core.compiler:ecj:4.6.1',
 		'org.webjars:bootstrap:3.3.7',
-		'com.google.code.gson:gson:2.6.2'
+		'com.google.code.gson:gson:2.6.2',
+		'mysql:mysql-connector-java'
 	)
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
