--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,11 @@
 server.port=8180
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/tranning_gradle?useUnicode=true&characterEncoding=utf8&autoReconnect=true
+spring.datasource.username=root
+spring.datasource.password=root
+
+#JPA
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
