--- a/bin/application.properties
+++ b/bin/application.properties
@@ -6,6 +6,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/tranning_gradle?useUnicode=tru
 spring.datasource.username=root
 spring.datasource.password=root
 
+#Config message
+spring.messages.encoding=UTF-8
 #JPA
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
