--- a/build.gradle
+++ b/build.gradle
@@ -29,9 +29,8 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
 	compile('org.springframework.boot:spring-boot-starter-thymeleaf')
 	compile('org.springframework.boot:spring-boot-starter-web')
-	compile('org.apache.httpcomponents:httpcore')
-	compile('org.apache.httpcomponents:httpclient')
 	runtime('org.springframework.boot:spring-boot-devtools')
+	compile group: 'commons-beanutils', name: 'commons-beanutils', version: '1.8.3'
 	compileOnly('org.projectlombok:lombok')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	runtime('mysql:mysql-connector-java')
