--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 spring.thymeleaf.mode=HTML5
 spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.cache=false
+
+spring.datasource.url=jdbc:mysql://localhost:3306/manage_insurance
+spring.datasource.username=root
+spring.datasource.password=hachu2908
