--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,9 @@ repositories {
 	maven { url "https://repo.spring.io/snapshot" }
 	maven { url "https://repo.spring.io/milestone" }
 }
-
+configurations {
+	providedRuntime
+}
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
 	compile('org.springframework.boot:spring-boot-starter-thymeleaf')
@@ -32,6 +34,7 @@ dependencies {
 	runtime('org.springframework.boot:spring-boot-devtools')
 	compile group: 'commons-beanutils', name: 'commons-beanutils', version: '1.8.3'
 	compileOnly('org.projectlombok:lombok')
+	providedRuntime('org.springframework.boot:spring-boot-starter-tomcat')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	runtime('mysql:mysql-connector-java')
 
