--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,10 @@ spring.thymeleaf.cache=false
 spring.datasource.url=jdbc:mysql://localhost:3306/manage_insurance
 spring.datasource.username=root
 spring.datasource.password=hachu2908
+
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=false
+spring.jpa.hibernate.ddl-auto=update
+
+spring.messages.basename=message_error
